# owoify_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  sonar-project.properties
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/structures/: dollarified.rs  mod.rs  word.rs
src/traits/: mod.rs  owoifiable.rs
src/utility/: interleave_arrays.rs  mappings.rs  mod.rs  presets.rs
