[package]
name = "owoify_rs"
version = "0.1.0"
authors = ["Chehui Chou <deadshot465@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
onig = { version = "6", default-features = false }
rand = "0.7.3"
regex = "1"