[package]
name = "owoify_rs"
version = "0.1.0"
authors = ["Chehui Chou"]
edition = "2018"
license = "MIT"
description = "This Rust port of mohan-cao's owoify-js is released under MIT license, which is also the same license of owoify-js. This simple library will turn any string into nonsensical babyspeak similar to what LeafySweet's infamous Chrome extension did."
homepage = "https://github.com/deadshot465/owoify_rs"
repository = "https://github.com/deadshot465/owoify_rs"
readme = "README.md"
keywords = ["rust", "Rust", "owoify", "fun", "funny", "nonsensical", "nonsense", "curse", "cursed", "baby", "babyspeak"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.7.3"
regex = "1"